@@ -40,6 +40,7 @@ Changes in Go4 v4.4.3 (Winter 2011)
 9. Use gStyle->GetStatFormat() for formatting of fitter parameters output.
    Add possibility to configure this format from GUI via Settings/Panel defaults/Printf menu.
    Implemented in qt3/qt4 versions. 
+10.Add possibility to display/monitor TLatex object from analysis (qt3/qt4).
 
 Changes in Go4 v4.4.2 (October 2010)
 1. Fix analysis crash when autosave file cannot be created in specified locations. 
